<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <LinearLayout
                android:id="@+id/notes_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/element_label_margin_end"
                android:layout_marginTop="@dimen/margin_top_14"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:background="@color/black"
                android:orientation="vertical"
                android:paddingTop="@dimen/margin_top_10"
                android:paddingBottom="@dimen/margin_top_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Parking Notice"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="1. Parking duration is time in minutes for example: if you parked for 1 hour then you will enter 60 as a duration because 1 hour is made up of 60 minutes."
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_font_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="2. In terms of parking cost, we charge R1 per minute."
                    android:textColor="@color/white"
                    android:textSize="@dimen/label_font_size" />


            </LinearLayout>

            <TextView
                android:id="@+id/txtTicketNoLabel"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/top_elements_margin_top"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:text="@string/ticket_no"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtTicketNoValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/notes_container" />

            <TextView
                android:id="@+id/txtTicketNoValue"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/top_elements_margin_top"
                android:layout_marginEnd="@dimen/element_value_margin_end"
                android:textSize="@dimen/label_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtTicketNoLabel"
                app:layout_constraintTop_toBottomOf="@id/notes_container" />


            <TextView
                android:id="@+id/txtParkingDurationLabel"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:text="@string/parking_duration_label"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtParkingDurationValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtTicketNoLabel" />

            <EditText
                android:id="@+id/txtParkingDurationValue"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top_10"
                android:layout_marginEnd="@dimen/element_value_margin_end"
                android:background="@drawable/semi_rounded_corners"
                android:hint="1"
                android:inputType="number"
                android:padding="@dimen/edit_text_padding"
                android:textColorHint="@color/colorPrimary"
                android:textSize="@dimen/edit_text_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtParkingDurationLabel"
                app:layout_constraintTop_toBottomOf="@id/txtTicketNoValue" />


            <TextView
                android:id="@+id/txtParkingCostLabel"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:text="@string/parking_cost_label"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtParkingCostValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtParkingDurationLabel" />

            <TextView
                android:id="@+id/txtParkingCostValue"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top_10"
                android:layout_marginEnd="@dimen/element_value_margin_end"
                android:textSize="@dimen/label_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtParkingCostLabel"
                app:layout_constraintTop_toBottomOf="@id/txtParkingDurationValue" />

            <TextView
                android:id="@+id/txtParkingPaymentAmountLabel"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:text="@string/parking_payment_amount"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@id/txtParkingPaymentAmountValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtParkingCostLabel" />

            <EditText
                android:id="@+id/txtParkingPaymentAmountValue"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top_10"
                android:layout_marginEnd="@dimen/element_value_margin_end"
                android:background="@drawable/semi_rounded_corners"
                android:hint="1"
                android:inputType="number"
                android:padding="@dimen/edit_text_padding"
                android:textSize="@dimen/edit_text_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtParkingPaymentAmountLabel"
                app:layout_constraintTop_toBottomOf="@id/txtParkingCostValue" />

            <TextView
                android:id="@+id/txtPaymentAmountError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:textColor="@color/redColor"
                android:textSize="@dimen/label_font_size"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/txtParkingAmountReturnedValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtParkingPaymentAmountLabel" />


            <TextView
                android:id="@+id/txtParkingAmountReturnedLabel"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:text="@string/parking_returned_amount"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintEnd_toStartOf="@id/txtParkingAmountReturnedValue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtPaymentAmountError" />

            <TextView
                android:id="@+id/txtParkingAmountReturnedValue"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:layout_marginTop="@dimen/margin_top_14"
                android:layout_marginEnd="@dimen/element_value_margin_end"
                android:textSize="@dimen/label_font_size"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txtParkingAmountReturnedLabel"
                app:layout_constraintTop_toBottomOf="@id/txtPaymentAmountError" />

            <TextView
                android:id="@+id/txtDenominationsHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginTop="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:text="@string/returned_amount_denominations_heading"
                android:textSize="@dimen/label_font_size"
                android:textStyle="bold"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtParkingAmountReturnedLabel" />

            <TextView
                android:id="@+id/txtDenominations"
                android:layout_width="@dimen/default_margin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/common_margin"
                android:layout_marginEnd="@dimen/element_label_margin_end"
                android:textSize="@dimen/label_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDenominationsHeading" />

            <Button
                android:id="@+id/btnPayTicket"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/button_margin_start"
                android:layout_marginTop="@dimen/margin_top_14"
                android:layout_marginEnd="@dimen/element_value_margin_end"
                android:text="@string/payment_button"
                android:textAllCaps="false"
                android:textSize="@dimen/label_font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txtDenominations" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>